--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "dependencies": {
     "@auth/core": "0.37.4",
-    "@auth/prisma-adapter": "^2.7.4",
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.4",
     "@paypal/react-paypal-js": "^8.7.0",
-    "@prisma/adapter-neon": "^6.5.0",
+    "@prisma/adapter-neon": "^6.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
@@ -30,13 +30,14 @@
     "@stripe/stripe-js": "^5.2.0",
     "@uploadthing/react": "^7.1.2",
     "autoprefixer": "^10.4.21",
+    "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.456.0",
     "next": "^15.2.2",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
@@ -56,7 +57,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.17.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.0",
     "@types/react": "^18",
@@ -68,7 +69,7 @@
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
     "postcss": "^8.5.6",
-    "prisma": "^6.5.0",
+    "prisma": "^6.17.1",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
